# goit-web-hw-10

./: pyproject.toml
myproject/myproject/: settings.py
myproject/quotes/static/quotes/: style.css
myproject/users/: forms.py  urls.py  views.py
myproject/users/templates/users/: login.html  register.html
