[tool.poetry]
name = "myproject"
version = "0.1.0"
description = "My Django project"
authors = ["InvisUA <xndell001@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
pytest = "^7.4.0"
pymongo = "^4.10.1"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
